--- a/Android /ActivityRecognition/app/src/main/res/layout/activity_main.xml
+++ b/Android /ActivityRecognition/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,11 @@
         android:id="@+id/textView" />
 
     <Button
-        android:text="Button"
+        android:text="Get Activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="116dp"
-        android:id="@+id/button2" />
+        android:id="@+id/getActivity" />
 </RelativeLayout>
