--- a/Android /LocationSave/app/src/main/res/layout/activity_main.xml
+++ b/Android /LocationSave/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,21 @@
         android:text="Show all Records"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:onClick="openRecordsActivity"
-        android:layout_alignStart="@+id/getLocationButton"
-        android:layout_marginTop="64dp"
-        android:id="@+id/showAllRecords" />
+        android:id="@+id/showAllRecords"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Settings"
+        android:clickable="true"
+        android:onClick="openSettingsActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="40dp" />
 
 
 </RelativeLayout>
